# cadency

./: .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json
backend/: .env.example  Dockerfile  cadency.db  cadency.db-shm  cadency.db-wal  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0dd19187c0f6_initial_schema.py
backend/app/: main.py
backend/app/ai/: style_match.py  suggest.py
backend/app/analyzer/: audio.py  youtube.py
backend/app/auth/: google.py
backend/app/db/: crud.py  deps.py  engine.py  models.py
frontend/: .env.production  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthButton.tsx  ChordInput.tsx  ChordPlayer.tsx  PianoChord.tsx  PianoRoll.tsx  SavedProgressions.tsx  SuggestionPanel.tsx  URLAnalyzer.tsx
frontend/lib/: api.ts  chords.ts  midi.ts  sounds.ts
